--- a/src/app/components/movie-details/movie-details.component.html
+++ b/src/app/components/movie-details/movie-details.component.html
@@ -118,7 +118,7 @@
                         <div class="listing__head">
                             <h2 class="listing__title">Cast</h2>
                         </div>
-                        <p-carousel [value]="casts" [numVisible]="6" [numScroll]="4" [circular]="false">
+                        <p-carousel [value]="casts" [numVisible]="6" [numScroll]="4" [circular]="false" [responsiveOptions]="responsiveOptions">
                             <ng-template let-cast pTemplate="item">
                                 <div class="listing-item-style" [routerLink]="['/person/', cast.id]">
                                     <div class="overlay">
@@ -186,7 +186,7 @@
                 <div class="listing__head">
                     <h2 class="listing__title">Recommended Movies</h2>
                 </div>
-                <p-carousel [value]="_recomend" [numVisible]="6" [numScroll]="4" [circular]="false">
+                <p-carousel [value]="_recomend" [numVisible]="6" [numScroll]="4" [circular]="false" [responsiveOptions]="responsiveOptions">
                     <ng-template let-recomend pTemplate="item">
                         <div class="listing-item-style" [routerLink]="['/movies/', recomend.id]">
                             <div class="overlay">
