--- a/src/app/components/tv-show-details/tv-show-details.component.html
+++ b/src/app/components/tv-show-details/tv-show-details.component.html
@@ -180,7 +180,7 @@
                 <div class="listing__head">
                     <h2 class="listing__title">Recommended Movies</h2>
                 </div>
-                <p-carousel [value]="_recomend" [numVisible]="6" [numScroll]="4" [circular]="false">
+                <p-carousel [value]="_recomend" [numVisible]="6" [numScroll]="4" [circular]="false" [responsiveOptions]="responsiveOptions">
                     <ng-template let-recomend pTemplate="item">
                         <div class="listing-item-style" [routerLink]="['/tv/', recomend.id]">
                             <div class="overlay">
