--- a/src/includes/header/header.component.html
+++ b/src/includes/header/header.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-light sticky-top">
+<nav class="navbar navbar-expand-lg navbar-light">
     <a class="navbar-brand" [routerLink]="['/']">FlixMovies</a>
-    <ul class="navbar-nav mr-auto listMenu">
+    <ul class="navbar-nav ml-auto listMenu">
         <li class="nav-item active">
             <a class="nav-link" [routerLink]="['/']" routerLinkActive="router-link-active">Home
                 <span class="sr-only">(current)</span>
@@ -16,10 +16,9 @@
             <a class="nav-link" [routerLink]="['/genres']" routerLinkActive="router-link-active">Genres</a>
         </li>
     </ul>
-
     <ul class="navbar-nav ml-auto">
         <li class="nav-item" (click)="searchBarUp = true">
-            <a class="search-icon" href="#"></a>
+            <a class="search-icon"></a>
         </li>
     </ul>
 
@@ -30,11 +29,13 @@
     <div class="form">
         <form autocomplete="off">
             <div class="field">
-                <input id="search" name="search" type="text" placeholder="Search for a movie, tv show or person...">
+                <input id="search" name="search" type="text" [(ngModel)]="searchStr" name="searchStr" (keyup.enter)="searchMovies()" placeholder="Search for a movie, tv show or person...">
             </div>
         </form>
     </div>
 </p-sidebar>
+
+<app-search-movies *ngIf="searchBarUp" [movieSearchResults]="movieSearchResults" (moviesEventEmitter)="moviesEventEmitter($event)"></app-search-movies>
 
 <p-sidebar [(visible)]="leftSidebar" position="left" [baseZIndex]="10000">
     <div class="sidebarNav">
