--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <app-header></app-header>
+<div class="loading" *ngIf="loading">
+    <mat-progress-bar [color]="color" [mode]="mode" [value]="value"></mat-progress-bar>
+</div>
+
 <router-outlet></router-outlet>
 <app-footer></app-footer>
