--- a/src/app/components/movie-details/movie-details.component.html
+++ b/src/app/components/movie-details/movie-details.component.html
@@ -137,7 +137,7 @@
                 <mat-tab label="Videos">
                     <div class="listing-space videos__status">
                         <div class="items">
-                            <div class="item" *ngFor="let list of related_video">
+                            <div class="item" *ngFor="let list of relatedvideo">
                                 <div (click)="openDialogMovie(list)" class="link">
                                     <div class="image lazyloaded">
                                         <img class="lazyload"
@@ -165,12 +165,12 @@
                     </div>
                 </mat-tab>
                 <mat-tab label="Photos">
-                    <div class="listing-space backdrop_">
+                    <div class="listing-space backdrop_" *ngIf="!backdrops">
                         <div class="head">
                             <h2 class="title">Backdrops</h2>
                         </div>
                         <div class="items">
-                            <div class="item backdrop_" *ngFor="let backdrop of _backdrops | slice: 1:17">
+                            <div class="item backdrop_" *ngFor="let backdrop of backdrops | slice: 1:17">
                                 <div class="image">
                                     <img class="lazyload" src="https://image.tmdb.org/t/p/w533_and_h300_bestv2/{{ backdrop.file_path }}">
                                 </div>
@@ -182,11 +182,11 @@
             </mat-tab-group>
 
 
-            <div class="listing-space mt-20 mb-5">
+            <div class="listing-space mt-20 mb-5" *ngIf="!recomendMovies">
                 <div class="listing__head">
                     <h2 class="listing__title">Recommended Movies</h2>
                 </div>
-                <p-carousel [value]="_recomend" [numVisible]="6" [numScroll]="4" [circular]="false" [responsiveOptions]="responsiveOptions">
+                <p-carousel [value]="recomendMovies" [numVisible]="6" [numScroll]="4" [circular]="false" [responsiveOptions]="responsiveOptions">
                     <ng-template let-recomend pTemplate="item">
                         <div class="listing-item-style" [routerLink]="['/movies/', recomend.id]">
                             <div class="overlay">
