--- a/src/app/components/tv-show-details/tv-show-details.component.html
+++ b/src/app/components/tv-show-details/tv-show-details.component.html
@@ -161,7 +161,7 @@
                     </div>
                 </mat-tab>
                 <mat-tab label="Photos">
-                    <div class="listing-space backdrop_">
+                    <div class="listing-space backdrop_" *ngIf="!_backdrops">
                         <div class="head">
                             <h2 class="title">Backdrops</h2>
                         </div>
@@ -176,7 +176,7 @@
                     </div>
                 </mat-tab>
             </mat-tab-group>
-            <div class="listing-space mt-20 mb-5">
+            <div class="listing-space mt-20 mb-5" *ngIf="!_recomend">
                 <div class="listing__head">
                     <h2 class="listing__title">Recommended Movies</h2>
                 </div>
