--- a/src/app/components/genre/genre.component.html
+++ b/src/app/components/genre/genre.component.html
@@ -4,7 +4,7 @@
     </div>
     <app-skeleton *ngIf="loader"></app-skeleton>
     <div class="row" *ngIf="!loader">
-        <div class="col-md-2 listing__items" *ngFor="let movie of moviesGenre; let i = index;">
+        <div class="col-md-2 listing__items" *ngFor="let movie of moviesGenre | slice:0:18">
             <div [routerLink]="['/movies/', movie.id]">
                 <div class="listing-item-style">
                     <div class="overlay">
@@ -20,4 +20,5 @@
             </div>
         </div>
     </div>
+    
 </div>
