--- a/src/assets/scss/_listing.scss
+++ b/src/assets/scss/_listing.scss
@@ -53,7 +53,7 @@
     border: 1px solid rgba(255, 255, 255, 0.1);
     color: $base-font-color;
     border-radius: 5px;
-    margin: 11px;
+    margin: 11px 5px 11px;
     position: relative;
     cursor: pointer;
   
