--- a/src/app/components/movies/movies.component.html
+++ b/src/app/components/movies/movies.component.html
@@ -1,7 +1,48 @@
 <div class="listing">
     <div class="listing__head">
-        <h3 class="listing__title">Movies</h3>
+        <h3 class="listing__title" *ngIf="!searchRes">Movies</h3>
+        <h3 class="listing__title" *ngIf="searchRes">Search Movies</h3>
     </div>
+    <form>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="form-group">
+                    <div class="input-group">
+                        <input type="text" class="form-control searchdesign" placeholder="Search for movies..." [(ngModel)]="searchStr"
+                            name="searchStr" (keyup.enter)="searchMovies()">
+                        <span class="input-group-btn">
+                            <button class="btn btn-primary btnDesign" type="button" (click)="searchMovies()">Go!</button>
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+    </form>
+
+    <ng-container *ngIf="searchRes">
+        <app-skeleton *ngIf="loader"></app-skeleton>
+        <div class="row" *ngIf="!loader">
+            <div class="col-md-2 listing__items" *ngFor="let movie of searchRes | slice:0:18">
+                <div [routerLink]="['/movies/', movie.id]">
+                    <div class="listing-item-style">
+                        <div class="overlay">
+                            <div class="hover"><i class="material-icons">play_arrow</i> PLAY NOW</div>
+                        </div>
+                        <img *ngIf="movie?.poster_path" src="https://image.tmdb.org/t/p/w370_and_h556_bestv2/{{movie?.poster_path}}"
+                            [alt]="movie.title ? movie.title : movie.name">
+                        <img *ngIf="!movie?.poster_path" src="assets/images/default-movie.png"
+                            [alt]="movie.title ? movie.title : movie.name">
+                        <h6>{{ movie?.title }}</h6>
+                        <p class="rate"><i class="material-icons">star</i><span>{{movie?.vote_average}}</span> /10</p>
+                        <p class="year"><span>{{movie?.release_date | date: 'yyyy'}}</span>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </ng-container>
+
     <app-skeleton *ngIf="loader"></app-skeleton>
     <div class="row" *ngIf="!loader">
         <div class="col-md-2 listing__items" *ngFor="let movie of topRated | slice:0:18">
@@ -10,8 +51,10 @@
                     <div class="overlay">
                         <div class="hover"><i class="material-icons">play_arrow</i> PLAY NOW</div>
                     </div>
-                    <img src="https://image.tmdb.org/t/p/w370_and_h556_bestv2/{{movie?.poster_path}}" [alt]="movie.title ? movie.title : movie.name">
-                    <img *ngIf="!movie?.poster_path" src="assets/images/default-movie.png" [alt]="movie.title ? movie.title : movie.name">
+                    <img src="https://image.tmdb.org/t/p/w370_and_h556_bestv2/{{movie?.poster_path}}"
+                        [alt]="movie.title ? movie.title : movie.name">
+                    <img *ngIf="!movie?.poster_path" src="assets/images/default-movie.png"
+                        [alt]="movie.title ? movie.title : movie.name">
                     <h6>{{ movie?.title }}</h6>
                     <p class="rate"><i class="material-icons">star</i><span>{{movie?.vote_average}}</span> /10</p>
                     <p class="year"><span>{{movie?.release_date | date: 'yyyy'}}</span>
@@ -20,7 +63,7 @@
             </div>
         </div>
     </div>
-    <div class="col-md-12">
-        <mat-paginator [length]="totalResults" [pageSize]="20" (page)="changePage($event)"></mat-paginator>
-    </div> 
+    
+    <mat-paginator [length]="totalResults" [pageSize]="20" (page)="changePage($event)"></mat-paginator>
+    
 </div>
