--- a/src/app/components/tv-shows/tv-shows.component.scss
+++ b/src/app/components/tv-shows/tv-shows.component.scss
@@ -5,3 +5,20 @@ mat-paginator{
 mat-paginator{
     color: #fff;
 }
+
+
+.searchdesign{
+    height: 44px;
+    background: #212121;
+    border: 1px solid #716e6e;
+    color: #fff;
+    font-size: 15px;
+}
+
+.btnDesign{
+    height: 44px;
+    border-radius: 0;
+    width: 55px;
+    background: #dc4666;
+    border: #dc4666;
+}
