--- a/src/app/components/movie-details/movie-details.component.html
+++ b/src/app/components/movie-details/movie-details.component.html
@@ -165,24 +165,23 @@
                     </div>
                 </mat-tab>
                 <mat-tab label="Photos">
-                    <div class="listing-space backdrop_" *ngIf="!backdrops">
+                    <div class="listing-space backdrop_">
                         <div class="head">
                             <h2 class="title">Backdrops</h2>
                         </div>
                         <div class="items">
                             <div class="item backdrop_" *ngFor="let backdrop of backdrops | slice: 1:17">
                                 <div class="image">
-                                    <img class="lazyload" src="https://image.tmdb.org/t/p/w533_and_h300_bestv2/{{ backdrop.file_path }}">
+                                    <img class="lazyload" src="https://image.tmdb.org/t/p/w533_and_h300_bestv2/{{ backdrop?.file_path }}">
                                 </div>
                             </div>
                         </div>
                     </div>
-
                 </mat-tab>
             </mat-tab-group>
 
 
-            <div class="listing-space mt-20 mb-5" *ngIf="!recomendMovies">
+            <div class="listing-space mt-20 mb-5">
                 <div class="listing__head">
                     <h2 class="listing__title">Recommended Movies</h2>
                 </div>
