--- a/src/app/components/movies-info/movies-info.component.html
+++ b/src/app/components/movies-info/movies-info.component.html
@@ -1,1 +1,37 @@
-<p>movies-info works!</p>
+<div class="hero">
+    <div class="backdrop">
+        <div class="lazyloaded"><button type="button" aria-label="Play Trailer" class="play"><svg
+                    xmlns="http://www.w3.org/2000/svg" width="55" height="55" viewBox="0 0 55 55">
+                    <circle cx="27.5" cy="27.5" r="26.75" fill="none" stroke="#fff" stroke-linecap="round"
+                        stroke-linejoin="round" stroke-width="1.5"></circle>
+                    <path fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"
+                        d="M20.97 40.81L40.64 27.5 20.97 14.19v26.62z"></path>
+                </svg></button> <img alt="Deadpool &amp; Wolverine" class="lazyload image"
+                src="https://image.tmdb.org/t/p/original/9l1eZiJHmhr5jIlthMdJN5WYoff.jpg"></div>
+    </div>
+    <div class="pane">
+        <div>
+            <h1 class="name">
+                Deadpool &amp; Wolverine
+            </h1>
+            <div class="meta">
+                <div class="rating">
+                    <div class="stars">
+                        <div style="width: 79%;"></div>
+                    </div>
+                    <div>
+                        1,388 Reviews
+                    </div>
+                </div>
+                <div class="info"><!----> <span>2024</span> <span>2h 8min</span> <span>Cert. R</span></div>
+            </div>
+            <div class="desc">
+                A listless Wade Wilson toils away in civilian life with his days as the morally flexible mercenary,
+                Deadpool, behind him. But when his homeworld faces an existential threat, Wade must reluctantly...
+            </div> <button type="button" class="button button--icon trailer"><span class="icon"><svg
+                        xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 24 24" fill="#fff">
+                        <path d="M3 22v-20l18 10-18 10z"></path>
+                    </svg></span> <span class="txt">Watch Trailer</span></button>
+        </div>
+    </div>
+</div>
