--- a/src/app/components/tv/tv.component.html
+++ b/src/app/components/tv/tv.component.html
@@ -1,3 +1,5 @@
+<app-hero [data]="tv_data"></app-hero>
+
 <app-carousel [title]="'Popular TV Shows'" [exploreLink]="'/movie/category/popularTv'"
     [items]="tvCategories['popularTv']" [canNavigateLeft]="true" [canNavigateRight]="true">
 </app-carousel>
