--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -12,3 +12,7 @@
 @import './components/_listing.scss';
 @import './components/_carousel.scss';
 @import './components/_card.scss';
+@import './components/_footer.scss';
+@import './components/_hero.scss';
+@import './components/_nav.scss';
+@import './components/_search.scss';
