--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
-<div *ngIf="searchOpen$ | async" @fadeAnimation>
+<div @fade>
+  <div *ngIf="searchOpen$ | async" @fadeAnimation>
     <form><app-search></app-search></form>
   </div>
-  
+
   <app-navbar></app-navbar>
-  
-  <router-outlet @fadeAnimation></router-outlet>
-  
-  <app-footer @fadeAnimation></app-footer>
+  <router-outlet #routerOutlet="outlet"></router-outlet>
+  <app-footer></app-footer>
+
+</div>
