--- a/src/app/components/global/hero/hero.component.html
+++ b/src/app/components/global/hero/hero.component.html
@@ -1,15 +1,15 @@
 <div class="hero">
-  <ng-container *ngFor="let hero of movies_data; let i = index">
+  <ng-container *ngFor="let hero of data; let i = index">
     <div class="hero-slide" *ngIf="current === i" @fade>
       <div class="backdrop">
         <div class="lazyloaded">
-          <img alt="{{hero?.title}}" class="lazyload image" src="https://image.tmdb.org/t/p/original/{{hero?.backdrop_path}}">
+          <img alt="{{hero?.title || hero?.name}}" class="lazyload image" src="https://image.tmdb.org/t/p/original/{{hero?.backdrop_path}}">
         </div>
       </div>
       <div class="pane">
         <div>
-          <h1 class="name" [routerLink]="['/movies/', hero.id]">
-            {{hero?.title}}
+          <h1 class="name" [routerLink]="[hero.link]">
+            {{hero?.title || hero?.name}}
           </h1>
           <div class="meta">
             <div class="rating">
@@ -22,12 +22,11 @@
             </div>
             <div class="info">
               <span *ngIf="hero.number_of_seasons">Season {{ hero.number_of_seasons }}</span>
-              <span *ngIf="hero?.release_date">{{ hero.release_date | date }}</span>
-              <span>Cert. {{ hero.popularity }}</span>
+              <span *ngIf="hero?.release_date || hero?.first_air_date">{{ hero?.release_date || hero?.first_air_date | date }}</span>
             </div>
           </div>
           <div class="desc">
-            {{ hero?.overview }}
+            {{ hero?.overview | truncate }}
           </div>
         </div>
       </div>
