--- a/src/assets/css/components/_hero.scss
+++ b/src/assets/css/components/_hero.scss
@@ -1,4 +1,4 @@
-@import '../../../assets//css/utilities/variables';
+@import '../utilities/_variables.scss';
 
 .hero {
     position: relative;
@@ -113,6 +113,8 @@
     line-height: 1.1;
     color: #fff;
     letter-spacing: $letter-spacing;
+    cursor: pointer;
+    text-transform: capitalize;
   
     @media (min-width: $breakpoint-small) {
       margin-bottom: 1.8rem;
@@ -149,7 +151,7 @@
     width: 8.5rem;
     height: 1.4rem;
     margin-right: 1rem;
-    background-image: url('../../../assets/images/stars.png');
+    background-image: url('../../images/stars.png');
     background-repeat: no-repeat;
     background-size: auto 100%;
   
@@ -160,7 +162,7 @@
   
     > div {
       height: 100%;
-      background-image: url('../../../assets/images/stars-filled.png');
+      background-image: url('../../images/stars-filled.png');
       background-repeat: no-repeat;
       background-size: auto 100%;
     }
