--- a/src/assets/css/components/_nav.scss
+++ b/src/assets/css/components/_nav.scss
@@ -1,81 +1,73 @@
-.nav {
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 5;
-    height: 4.5rem;
-    background-color: #000;
+@import '../utilities/_variables.scss';
+.navbar {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 5;
+  height: 4.5rem;
+  background-color: #000;
+
+  @media (min-width: $breakpoint-large) {
+    top: 0;
+    right: auto;
+    width: 10rem;
+    height: 100%;
+    border-right: 1px solid $secondary-color;
+  }
+
+  .nolist {
     display: flex;
-    justify-content: center;
-    align-items: center;
-  
+    height: 100%;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+
     @media (min-width: $breakpoint-large) {
-      top: 0;
-      right: auto;
-      width: 10rem;
-      height: 100%;
-      border-right: 1px solid $secondary-color;
-      display: block;
+      flex-direction: column;
     }
-  
-    ul {
-      display: flex;
+
+    li {
+      flex: 1 1 auto;
       height: 100%;
-      margin: 0;
-      padding: 0;
-      list-style: none;
-      width: 100%;
-  
+
       @media (min-width: $breakpoint-large) {
-        flex-direction: column;
-        height: 100%;
-      }
-  
-      li {
-        flex: 1 1 auto;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-  
-        @media (min-width: $breakpoint-large) {
-          flex: 0 1 auto;
-          height: 10rem;
-        }
-      }
-    }
-  
-    button {
-      padding: 0;
-      margin: 0;
-      background: none;
-      border: none;
-      cursor: pointer;
-    }
-  
-    a,
-    button {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: 100%;
-      height: 100%;
-      outline: none;
-      transition: all 0.2s;
-  
-      &:hover,
-      &:focus {
-        opacity: 0.8;
+        flex: 0 1 auto;
+        height: 10rem;
       }
     }
   }
-  
-  a.active {
+
+  .search-toggle {
+    padding: 0;
+    margin: 0;
+    background: none;
+  }
+
+  a,
+  button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    outline: 0;
+    transition: all 0.2s;
+
+    &:hover,
+    &:focus {
+      opacity: 0.8;
+    }
+  }
+}
+
+a.nuxt-link-active {
+  &:hover,
+  &:focus {
     opacity: 1;
-  
-    svg g {
-      stroke: $primary-color;
-    }
   }
-  
+
+  svg g {
+    stroke: $primary-color;
+  }
+}
