--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,8 @@
 <app-hero [data]="movies_data"></app-hero>
-<app-carousel [title]="'Popular Movies'" [exploreLink]="'/movie'" [items]="moviesSlider" [canNavigateLeft]="true" [canNavigateRight]="true"></app-carousel>
-<app-carousel [title]="'Popular TV Shows'" [exploreLink]="'/tv'" [items]="tvSlider" [canNavigateLeft]="true" [canNavigateRight]="true"></app-carousel>
+<app-carousel [title]="'Popular Movies'" [exploreLink]="'/movie'" 
+    [items]="moviesSlider" [canNavigateLeft]="true" [canNavigateRight]="true">
+</app-carousel>
+
+<app-carousel [title]="'Popular TV Shows'" [exploreLink]="'/tv'" 
+    [items]="tvSlider" [canNavigateLeft]="true" [canNavigateRight]="true">
+</app-carousel>
