--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -16,3 +16,4 @@
 @import './components/_hero.scss';
 @import './components/_nav.scss';
 @import './components/_search.scss';
+@import './components/_movieInfo.scss';
