--- a/src/app/components/movies-info/movies-info.component.html
+++ b/src/app/components/movies-info/movies-info.component.html
@@ -1,37 +1,243 @@
 <div class="hero">
     <div class="backdrop">
-        <div class="lazyloaded"><button type="button" aria-label="Play Trailer" class="play"><svg
-                    xmlns="http://www.w3.org/2000/svg" width="55" height="55" viewBox="0 0 55 55">
-                    <circle cx="27.5" cy="27.5" r="26.75" fill="none" stroke="#fff" stroke-linecap="round"
-                        stroke-linejoin="round" stroke-width="1.5"></circle>
-                    <path fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"
-                        d="M20.97 40.81L40.64 27.5 20.97 14.19v26.62z"></path>
-                </svg></button> <img alt="Deadpool &amp; Wolverine" class="lazyload image"
-                src="https://image.tmdb.org/t/p/original/9l1eZiJHmhr5jIlthMdJN5WYoff.jpg"></div>
+        <div class="lazyloaded">
+            <img alt="{{movie_data?.title || movie_data?.name}}" class="lazyload image"
+                src="https://image.tmdb.org/t/p/original/{{movie_data?.backdrop_path}}" />
+        </div>
     </div>
     <div class="pane">
         <div>
-            <h1 class="name">
-                Deadpool &amp; Wolverine
+            <h1 class="name" [routerLink]="[movie_data?.name]">
+                {{movie_data?.title || movie_data?.name}}
             </h1>
             <div class="meta">
                 <div class="rating">
                     <div class="stars">
-                        <div style="width: 79%;"></div>
+                        <div [style.width.%]="(movie_data?.vote_average / 10) * 100"></div>
                     </div>
-                    <div>
-                        1,388 Reviews
+                    <div *ngIf="movie_data?.vote_count > 0">
+                        {{ movie_data?.vote_count | numberWithCommas }} Reviews
                     </div>
                 </div>
-                <div class="info"><!----> <span>2024</span> <span>2h 8min</span> <span>Cert. R</span></div>
+                <div class="info">
+                    <span *ngIf="movie_data?.number_of_seasons">Season {{ movie_data?.number_of_seasons }}</span>
+                    <span *ngIf="movie_data?.release_date || movie_data?.first_air_date">{{ movie_data?.release_date
+                        ||
+                        movie_data?.first_air_date | date }}</span>
+                </div>
             </div>
             <div class="desc">
-                A listless Wade Wilson toils away in civilian life with his days as the morally flexible mercenary,
-                Deadpool, behind him. But when his homeworld faces an existential threat, Wade must reluctantly...
-            </div> <button type="button" class="button button--icon trailer"><span class="icon"><svg
-                        xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 24 24" fill="#fff">
-                        <path d="M3 22v-20l18 10-18 10z"></path>
-                    </svg></span> <span class="txt">Watch Trailer</span></button>
+                {{ movie_data?.overview | truncate }}
+            </div>
         </div>
+    </div>
+</div>
+<div class="movieInfo">
+    <div class="nav">
+        <button type="button" id="overview" class="buttonTab" [class.buttonActive]="activeTab === 'overview'"
+            (click)="setActiveTab('overview')">
+            Overview
+        </button>
+        <button type="button" id="videos" class="buttonTab" [class.buttonActive]="activeTab === 'videos'"
+            (click)="setActiveTab('videos')">
+            Videos
+        </button>
+        <button type="button" id="backdrop" class="buttonTab" [class.buttonActive]="activeTab === 'backdrop'"
+            (click)="setActiveTab('backdrop')">
+            Photos
+        </button>
+    </div>
+
+    <div class="spacing">
+        <div *ngIf="activeTab === 'overview'" class="info" id="overview">
+            <div class="left">
+                <div class="poster">
+                    <img alt="{{movie_data?.title || movie_data?.name}}" class="lazyload"
+                        src="https://image.tmdb.org/t/p/w370_and_h556_bestv2/{{ movie_data?.poster_path }}" />
+                </div>
+            </div>
+            <div class="right">
+                <div class="overview">
+                    <h2 class="title">Storyline</h2>
+                    <div>{{movie_data?.overview}}</div>
+                </div>
+                <div class="stats">
+                    <ul class="nolist">
+                        <li>
+                            <div class="label">
+                                Released
+                            </div>
+                            <div class="value">
+                                {{ movie_data?.release_date | date }}
+                            </div>
+                        </li>
+                        <li>
+                            <div class="label">
+                                Runtime
+                            </div>
+                            <div class="value">
+                                {{ movie_data?.runtime | time }}
+                            </div>
+                        </li>
+                        <li *ngIf="movie_data?.budget">
+                            <div class="label">
+                                Budget
+                            </div>
+                            <div class="value">
+                                ${{ movie_data?.budget | numberWithCommas }}
+                            </div>
+                        </li>
+                        <li *ngIf="movie_data?.revenue">
+                            <div class="label">
+                                Revenue
+                            </div>
+                            <div class="value">
+                                ${{ movie_data?.revenue | numberWithCommas }}
+                            </div>
+                        </li>
+
+                        <li *ngIf="movie_data?.genres.length">
+                            <div class="label">
+                                Genre
+                            </div>
+                            <div class="comma_" *ngFor="let genre of movie_data?.genres">
+                                <a routerLink="/genres/{{genre.id}}/{{genre.name}}">{{ genre?.name }}</a>
+                            </div>
+                        </li>
+                        <li *ngIf="movie_data?.status">
+                            <div class="label">
+                                Status
+                            </div>
+                            <div class="value">
+                                {{movie_data?.status}}
+                            </div>
+                        </li>
+                        <li *ngIf="movie_data?.spoken_languages?.length">
+                            <div class="label">
+                                Language
+                            </div>
+                            <div class="comma_" *ngFor="let language of movie_data?.spoken_languages">
+                                <a>{{ language?.name }}</a>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="external" *ngIf="movie_data?.homepage">
+                    <ul class="nolist">
+                        <li>
+                            <a href="https://twitter.com/{{external_data?.twitter_id}}" target="_blank"
+                                aria-label="Link to Twitter account" rel="noopener">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
+                                    fill="#fff">
+                                    <path
+                                        d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z">
+                                    </path>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.facebook.com/{{external_data?.facebook_id}}" target="_blank"
+                                aria-label="Link to Facebook account" rel="noopener">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
+                                    fill="#fff">
+                                    <path
+                                        d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z">
+                                    </path>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://instagram.com/{{external_data?.instagram_id}}" target="_blank"
+                                aria-label="Link to Instagram account" rel="noopener">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
+                                    fill="#fff">
+                                    <path
+                                        d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z">
+                                    </path>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.imdb.com/title/{{external_data?.imdb_id}}" target="_blank"
+                                aria-label="Link to IMDb account" rel="noopener">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
+                                    fill="#fff">
+                                    <path
+                                        d="M14.31 9.588v.005c-.077-.048-.227-.07-.42-.07v4.815c.27 0 .44-.06.5-.165.062-.104.095-.405.095-.885v-2.866c0-.33-.004-.54-.033-.63a.292.292 0 0 0-.14-.204z">
+                                    </path>
+                                    <path
+                                        d="M22.416 0H1.62C.742.06.06.744 0 1.596V22.38c.06.874.712 1.542 1.555 1.617.015.003.03.003.045.003h20.845A1.727 1.727 0 0 0 24 22.29V1.71C24 .82 23.305.07 22.416 0zM4.792 15.626H2.887V8.26h1.905v7.366zm6.54-.002H9.67v-4.97L9 15.623H7.812l-.698-4.86-.007 4.86H5.44V8.26h2.468c.083.523.16 1.048.23 1.574l.27 1.87.442-3.444h2.483v7.364zm4.977-2.18c0 .655-.044 1.094-.104 1.32-.062.22-.17.4-.326.52-.15.13-.34.218-.57.266-.223.045-.57.075-1.02.075l-.004-.002H11.98V8.26h1.426c.914 0 1.45.047 1.77.128.325.09.575.225.745.42.165.18.273.404.313.645.05.235.076.705.076 1.402v2.588zm4.944.475c0 .45-.045.764-.09.99-.06.224-.195.404-.405.568-.226.166-.48.24-.78.24-.22 0-.5-.06-.68-.136a1.586 1.586 0 0 1-.515-.427l-.116.47H16.95V8.26l-.02-.003h1.8v2.4c.15-.175.315-.31.51-.4.196-.083.466-.127.69-.127.226-.003.45.036.66.115.17.07.32.185.436.33.09.125.15.27.18.42.03.138.044.43.044.87v2.054z">
+                                    </path>
+                                    <path
+                                        d="M19.08 11.205c-.12 0-.194.04-.225.12-.03.08-.06.29-.06.624v1.946c0 .324.03.533.06.623.04.086.13.14.226.134.12 0 .272-.047.3-.14.03-.097.046-.32.046-.674l.03-.002v-1.89c0-.303-.015-.508-.06-.603-.044-.1-.195-.14-.315-.14z">
+                                    </path>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="{{movie_data?.homepage}}" target="_blank" aria-label="Link to Homepage"
+                                rel="noopener">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
+                                    fill="#fff">
+                                    <path
+                                        d="M6.188 8.719c.439-.439.926-.801 1.444-1.087 2.887-1.591 6.589-.745 8.445 2.069l-2.246 2.245c-.644-1.469-2.243-2.305-3.834-1.949-.599.134-1.168.433-1.633.898l-4.304 4.306c-1.307 1.307-1.307 3.433 0 4.74 1.307 1.307 3.433 1.307 4.74 0l1.327-1.327c1.207.479 2.501.67 3.779.575l-2.929 2.929c-2.511 2.511-6.582 2.511-9.093 0s-2.511-6.582 0-9.093l4.304-4.306zm6.836-6.836l-2.929 2.929c1.277-.096 2.572.096 3.779.574l1.326-1.326c1.307-1.307 3.433-1.307 4.74 0 1.307 1.307 1.307 3.433 0 4.74l-4.305 4.305c-1.311 1.311-3.44 1.3-4.74 0-.303-.303-.564-.68-.727-1.051l-2.246 2.245c.236.358.481.667.796.982.812.812 1.846 1.417 3.036 1.704 1.542.371 3.194.166 4.613-.617.518-.286 1.005-.648 1.444-1.087l4.304-4.305c2.512-2.511 2.512-6.582.001-9.093-2.511-2.51-6.581-2.51-9.092 0z">
+                                    </path>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div *ngIf="activeTab === 'videos'" class="videos">
+            <div class="head">
+                <select (change)="filterVideos($event)">
+                    <option *ngFor="let type of videoTypes" [value]="type">{{ type }}</option>
+                </select>
+                <strong class="count">
+                    {{ filteredVideos.length }} Videos
+                </strong>
+            </div>
+            <div class="items">
+                <div class="item" *ngFor="let video_data of filteredVideos">
+                    <div href="https://youtube.com/watch?v=BId1AMHzItQ" class="link">
+                        <div class="image lazyloaded">
+                            <img class="lazyload" src="https://img.youtube.com/vi/{{video_data?.key}}/mqdefault.jpg">
+                            <div class="play">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 55 55">
+                                    <circle cx="27.5" cy="27.5" r="26.75" fill="none" stroke="#fff"
+                                        stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"></circle>
+                                    <path fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round"
+                                        stroke-width="1.5" d="M20.97 40.81L40.64 27.5 20.97 14.19v26.62z"></path>
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="name">
+                            {{video_data?.name}}
+                        </div>
+                        <div class="type">
+                            {{video_data?.type}}
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div *ngIf="activeTab === 'backdrop'" id="backdrop">
+            <div class="head">
+                <h2 class="title">Backdrops</h2>
+                <!-- <strong class="count">{{ backdrops.length }} Images</strong> -->
+              </div>
+              <div class="items">
+                <!-- <div class="item backdrop_" *ngFor="let backdrop of backdrops">
+                    <div class="image lazyloaded">
+                        <img class="lazyload" src="https://image.tmdb.org/t/p/w533_and_h300_bestv2/{{ backdrop?.file_path }}">
+                    </div>
+                </div> -->
+              </div>
+            
+        </div>
+
     </div>
 </div>
