--- a/src/app/components/global/carousel/carousel.component.html
+++ b/src/app/components/global/carousel/carousel.component.html
@@ -1,9 +1,10 @@
 <div class="listing listing--carousel">
   <div class="listing__head">
     <h2 class="listing__title">{{ title }}</h2>
-    <a [routerLink]="[exploreLink]" routerLinkActive="router-link-active" class="listing__explore">
+    <a *ngIf="isDefaultCarousel" [routerLink]="[exploreLink]" routerLinkActive="router-link-active" class="listing__explore">
       <strong>Explore All</strong>
     </a>
+    
   </div>
   <div class="carousel">
     <button aria-label="Previous" type="button" [attr.disabled]="!canNavigateLeftInternal ? true : null"
@@ -17,7 +18,7 @@
       <div *ngFor="let item of items" class="card">
         <a [routerLink]="[item.link]" class="card__link">
           <div class="card__img">
-            <img *ngIf="item.imgSrc" [attr.src]="item.imgSrc" [alt]="item.title" class="lazyload">
+            <img *ngIf="item.imgSrc" [attr.src]="item.imgSrc" [alt]="item.title || item.name" class="lazyload">
             <span *ngIf="!item.imgSrc">
               <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill-rule="evenodd"
                 clip-rule="evenodd" fill="#999">
@@ -27,13 +28,24 @@
               </svg>
             </span>
           </div>
-          <h2 class="card__name">{{ item.title }}</h2>
-          <div class="card__rating">
-            <div class="card__stars">
-              <div [style.width.%]="item.rating"></div>
+
+          <!-- Default Carousel -->
+          <div *ngIf="isDefaultCarousel">
+            <h2 class="card__name">{{ item.title }}</h2>
+            <div class="card__rating">
+              <div class="card__stars">
+                <div [style.width.%]="item.rating"></div>
+              </div>
+              <div class="card__vote">{{ item.vote }}</div>
             </div>
-            <div class="card__vote">{{ item.vote }}</div>
           </div>
+
+          <!-- Cast Carousel -->
+          <div *ngIf="isCastCarousel">
+            <h2 class="credits-item__name">{{ item.name }}</h2>
+            <h2 class="credits-item__character">{{ item.character }}</h2>
+          </div>
+      
         </a>
       </div>
       <div class="card">
